--- a/.gitignore
+++ b/.gitignore
@@ -395,3 +395,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,angular,macos,windows,linux,vim,intellij+all,webstorm
+
+.fake
+.ionide
