--- a/my-app/angular.json
+++ b/my-app/angular.json
@@ -66,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "my-app:build"
+            "browserTarget": "my-app:build",
+            "proxyConfig": "proxy.config.json"
           },
           "configurations": {
             "production": {
